--- a/package.json
+++ b/package.json
@@ -1,16 +1,74 @@
 {
-  "name": "Threejs",
+  "name": "threejs",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "parcel index.html --open --port 9090",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "webpack --config config/webpack.config.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "babel-polyfill": "^6.26.0"
+    "@tweenjs/tween.js": "^18.6.4",
+    "axios": "^0.21.4",
+    "babel-polyfill": "^6.26.0",
+    "dat.gui": "0.7.7",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "g": "^2.0.1",
+    "js": "^0.1.0",
+    "lodash": "^4.17.21",
+    "stats.js": "^0.17.0",
+    "three": "0.128.0"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "@babel/cli": "^7.14.8",
+    "@babel/core": "^7.14.8",
+    "@babel/plugin-proposal-class-properties": "^7.14.5",
+    "@babel/plugin-proposal-decorators": "^7.14.5",
+    "@babel/plugin-proposal-object-rest-spread": "^7.14.7",
+    "@babel/plugin-syntax-dynamic-import": "^7.8.3",
+    "@babel/plugin-syntax-jsx": "^7.14.5",
+    "@babel/plugin-transform-object-assign": "^7.14.5",
+    "@babel/plugin-transform-react-jsx": "^7.14.5",
+    "@babel/plugin-transform-runtime": "^7.14.5",
+    "@babel/preset-env": "^7.14.9",
+    "@webpack-cli/serve": "^1.5.1",
+    "babel-eslint": "^10.1.0",
+    "babel-loader": "^8.2.2",
+    "babel-plugin-transform-class-properties": "^6.24.1",
+    "clean-webpack-plugin": "^4.0.0",
+    "copy-webpack-plugin": "^4.6.0",
+    "css-loader": "^6.2.0",
+    "eslint": "^6.0.0",
+    "eslint-config-airbnb-base": "^14.2.0",
+    "eslint-import-resolver-webpack": "^0.12.2",
+    "eslint-loader": "^4.0.2",
+    "eslint-plugin-class-property": "^1.1.0",
+    "eslint-plugin-import": "2.22.0",
+    "extract-text-webpack-plugin": "^4.0.0-beta.0",
+    "html-webpack-plugin": "^3.2.0",
+    "less": "^3.0.1",
+    "less-loader": "^4.1.0",
+    "style-loader": "^0.20.3",
+    "ts-loader": "8.2.0",
+    "typescript": "^4.4.4",
+    "uglifyjs-webpack-plugin": "^2.2.0",
+    "parcel-bundler": "^1.6.1",
+    "url-loader": "^1.0.1",
+    "webpack-cli": "^3.3.12",
+    "webpack-dashboard": "^2.0.0",
+    "webpack-dev-server": "^3.1.3",
+    "webpack-shell-plugin-next": "^2.2.2"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/wokeyi7aini/ThreeJSParticleSystem.git"
+  },
+  "bugs": {
+    "url": "https://github.com/wokeyi7aini/ThreeJSParticleSystem/issues"
+  },
+  "homepage": "https://github.com/wokeyi7aini/ThreeJSParticleSystem#readme",
   "description": ""
 }
