--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "dev": "parcel index.html --open --port 9090",
+    "dev": "parcel demo.html --open --port 9090",
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "webpack --config config/webpack.config.js"
   },
