--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "eslint-plugin-import": "2.22.0",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "html-webpack-plugin": "^3.2.0",
+    "lerna": "^4.0.0",
     "less": "^3.0.1",
     "less-loader": "^4.1.0",
     "parcel-bundler": "^1.6.1",
