--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "three-effect",
-  "version": "1.0.7",
+  "name": "@yushu/three-effect",
+  "version": "1.0.8",
   "main": "public/main.js",
   "scripts": {
     "dev": "parcel src/demo.html --open --port 9090",
@@ -9,7 +9,6 @@
     "build": "webpack --profile --progress --mode=production --config webpack.config.prd.js"
   },
   "keywords": [],
-  "author": "",
   "license": "ISC",
   "dependencies": {
     "@tweenjs/tween.js": "^18.6.4",
@@ -69,9 +68,13 @@
     "type": "git",
     "url": "git+https://github.com/wokeyi7aini/ThreeJSParticleSystem.git"
   },
+  "publishConfig": {
+    "registry": "https://persagy2021-npm.pkg.coding.net/yushu_web/npm/"
+  },
   "bugs": {
     "url": "https://github.com/wokeyi7aini/ThreeJSParticleSystem/issues"
   },
   "homepage": "https://github.com/wokeyi7aini/ThreeJSParticleSystem#readme",
-  "description": "【发包】\r 项目地址：https://www.npmjs.com/\r 项目：three-effect\r 账号：huangqiuyan\r 邮箱：huangqiuyan@yushu.biz\r 密码：Cctv@123@123"
+  "description": "【发包】\r 项目地址：https://www.npmjs.com/\r 项目：three-effect\r 账号：huangqiuyan\r 邮箱：huangqiuyan@yushu.biz\r 密码：Cctv@123@123",
+  "author": "shemi"
 }
